# src/swagger.json
@@ -1,76 +1,147 @@
 {
     "openapi": "3.0.0",
-    "info":{
-        "title":"RentallX Documentation",
-        "decription":"This is an API Rent",
-        "version":"1.0.0", 
-        "contact":{
-            "email":"leojesus@email.com"
+    "info": {
+        "title": "RentX Documentation",
+        "decription": "This is an API Rent",
+        "version": "1.0.0",
+        "contact": {
+            "email": "leojesus@email.com"
         }
-    }, 
-    "paths":{
-        "/categories":{
-            "post":{
-                "tags":["Category"],
-                "summary":"Create a category",
-                "decription":"Create a new Category", 
-                "requestBody":{
-                    "content":{
-                        "application/json":{
-                            "schema":{
-                                "type":"object", 
-                                "properties":{
-                                    "name":{
-                                        "type":"string"
-                                    }, 
-                                    "description":{
-                                        "type":"string"
+    },
+    "paths": {
+        "/categories": {
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Create a category",
+                "decription": "Create a new Category",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "description": {
+                                        "type": "string"
                                     }
                                 },
-                                "example":{
-                                    "name":"Category name sample", 
+                                "example": {
+                                    "name": "Category name sample",
                                     "description": "Category description sample"
                                 }
                             }
                         }
                     }
                 },
-                "responses":{
-                    "201":{
-                        "description":"Created"
-                    }, 
-                    "500":{
-                        "description":"Category Already Exists"
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Category Already Exists"
                     }
                 }
             },
-            "get":{
-                    "tags":["Category"],
-                    "summary":"List all categories", 
-                    "description":"List all categories", 
-                    "responses":{
-                        "200":{
-                            "description":"Success", 
-                            "content":{
-                               "application/json":{
-                                   "schema":{
-                                       "types":"array", 
-                                       "items":{
-                                           "type":"object", 
-                                           "properties":{
-                                               "name":{
-                                                   "type":"string",
-                                                   "description":"string"
-                                               }
-                                           }
-                                       }
-                                   }
-                               }
+            "get": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "List all categories",
+                "description": "List all categories",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "types": "array",
+                                    "items": {
+                                        "type": "object",
+                                        "properties": {
+                                            "name": {
+                                                "type": "string",
+                                                "description": "string"
+                                            }
+                                        }
+                                    }
+                                }
                             }
                         }
                     }
+                }
+            }
+        },
+        "/categories/import": {
+            "post": {
+                "tags": [
+                    "Category"
+                ],
+                "summary": "Upload a new Category",
+                "description": "upload a new category",
+                "requestBody": {
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "file": {
+                                        "type": "string",
+                                        "format": "binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "/Specification": {
+            "post": {
+                "tags": [
+                    "Specifications"
+                ],
+                "summary": "Create a specification",
+                "description": "Create a new specification",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/definitions/Specification"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "500": {
+                        "description": "Specification Already Exists!"
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "Specification": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                }
             }
         }
     }
-
 }
